using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class AnimatorVariables
{
    public static readonly int WalkX = Animator.StringToHash("WalkX");
    public static readonly int WalkY = Animator.StringToHash("WalkY");
    public static readonly int WeaponMode = Animator.StringToHash("WeaponMode");
}
